Web Framework v4.8.8
Created and maintained by Darius Babcock, Greener Web Design

## Version 4.8.8 ##
	- Added class.social_media.php (in progress) for generating common social network elements. FB only for now
	- Added style_checker.php in root to display current styles for various elements at a glance


## Version 4.8.7 ##
	- Added expire headers, gzip, and etag options to default htaccess file
	- Added js_constants option to config.php to duplicate PHP constants in JS on page load
	- Added a 'fix_empty_dates' method to class.standards for handling date fields easily

## Version 4.8.6 ##
	- Added the 'opacity' class to class.css for cross-browser opacity settings

## Version 4.8.5 ##
	- Modified class.email.php to accept variables one-at-a-time rather than all on construct
	- Created 'settings' folder in 'lib' to house sensitive info for site. Folder permissions can be changed.

## Version 4.8.4 ##
	- Fixed a bug in class.css that caused -webkit-box-shadow not to blur correctly

## Version 4.8.3 ##
	- Fixed a bug that prevented dates in 'DD-MM-YYYY' format from converting properly in class.standards

## Version 4.8.2 ##
	- Added scan_dir method to class.misc for retreiving file lists of directories
	- Added a load_xml method to class.misc for reading in XML files

## Version 4.8.1 ##
	- Added mobile browser checking function to class.misc. Returns true or false.
	- Added fluid versions of 960 for fluid width sites.
	- Added 'viewport' meta tag for mobile

## Version 4.8.0 ##
	- Added CKEditor as a WYSIWYG option along with documentation in the lib/docs folder
	- Updated error documents to be cleaner and all in one folder (lib/error_documents)

## Version 4.7.3 ##
	- Fixed a bug in class.css::border_radius that caused an extra corner to be rounded for "RIGHT"

## Version 4.7.2 ##
	- Changed meta tag output to support infinite meta tags
	- Added header and footer tags to header.php and footer.php

## Version 4.7.1 ##