@@ -55,37 +55,6 @@
 	color: #264409;
 }
 
-/* FORM STYLES */
-input, textarea, select {
-	border: solid 1px #d8d8d8;
-	color: #016c8b;
-}
-
-input:focus, textarea:focus {
-	background: #ffffb0;
-}
-
-input[type='checkbox'] {
-	border: none;
-}
-
-label {
-	font-size: 1.2em;
-	font-weight: bold;
-}
-
-::-webkit-input-placeholder {
-	color: #bebebe;
-}
-
-:-moz-placeholder {
-	color: #bebebe;
-}
-
-.print_break {
-	display: none;
-}
-
 /* AUTOCOMPLETE STYLES */
 .auto_complete_results {
 	border: solid 1px #E4E4E4;
@@ -234,33 +203,6 @@ label {
 	-webkit-border-bottom-right-radius: 15px;
 	border-radius-bottom-left: 15px;
 	border-radius-bottom-right: 15px;
-}
-
-.button {
-	background: #222222 url('../images/alert-overlay.png') repeat-x;
-	display: inline;
-	padding: 5px 10px 6px;
-	color: #fff;
-	text-decoration: none;
-	font-weight: bold;
-	line-height: 1;
-	border: none;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-box-shadow: 0 1px 3px #999;
-	-webkit-box-shadow: 0 1px 3px #999;
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-	border-bottom: 1px solid rgba(0,0,0,0.25);
-	text-shadow: 0 -1px 1px #222;
-	border-bottom: 1px solid #222;
-	position: relative;
-	cursor: pointer;
-}
-
-.button:hover {
-	background-color: #573CA2;
 }
 
 .tooltip:hover:after {
