@@ -4,6 +4,8 @@ Created and maintained by Darius Babcock, Greener Web Design
 ## Version 4.8.8 ##
 	- Added class.social_media.php (in progress) for generating common social network elements. FB only for now
 	- Added style_checker.php in root to display current styles for various elements at a glance
+	- Major css button overhaul and updating
+	- Changes between style.php and helpers.css
 
 
 ## Version 4.8.7 ##
